# bairstow-cpp

./: CMakeLists.txt  README.md  README_8md.html  ThreadPool_8h.html  _r_e_a_d_m_e_8md.html  _thread_pool_8h.html  aberth_8hpp.html  aberth_ai.cpp  about.html  about_8dox.html  annotated.html  autocorr_8hpp.html  classOptions.html  classThreadPool.html  class_options.html  class_thread_pool.html  classbairstow_1_1Bairstow.html  classbairstow_1_1_bairstow.html  classnumeric_1_1_matrix2.html  classnumeric_1_1_vector2.html  classnumeric_1_1matrix2.html  classnumeric_1_1vector2.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_a3a39ecf17a9ba8619bd35131284472d.html  doc-dev.yml  files.html  greeter_8h.html  index.html  iwyu.out  matrix2_8hpp.html  modules.html  namespacebairstow.html  namespacefun.html  namespacefun_1_1detail.html  namespacenumeric.html  namespaces.html  pages.html  robin_8hpp.html  rootfinding-ai.cpp  (+10 more)
.github/workflows/: install.yml  standalone.yml  test.yml
.trunk/: out  trunk.yaml
bench/: BM_aberth.cpp  BM_autocorr.cpp  BM_fir.cpp  CMakeLists.txt
documentation/: CMakeLists.txt  conf.py
include/bairstow/: ThreadPool.h  aberth.hpp  autocorr.hpp  greeter.h  matrix2.hpp  robin.hpp  rootfinding.hpp  vector2.hpp
include/py2cpp-bak/: dict.hpp  enumerate.hpp  fractions.hpp  range.hpp
source/: aberth.cpp  autocorr.cpp  greeter.cpp  rootfinding.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.old  test_aberth.cpp  (+6 more)
test_installed/: CMakeLists.txt
